--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,4 +1,18 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    <h3>Enclosures</h3>
+
+    <table class="table-enclosures">
+        <tbody>
+            {% for enclosure in enclosures %}
+                <tr id="enclosure-{{ enclosure.id }}">
+                    <td>Enclosure # {{ enclosure.id }}</td>
+                    <td>
+                        Contains <strong>{{ enclosure.dinosaurCount }}</strong> dinosaurs
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
