Loading fixtures references

--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,6 +11,13 @@
                     <td>
                         Contains <strong>{{ enclosure.dinosaurCount }}</strong> dinosaurs
                     </td>
+                    <td>
+                        {% if enclosure.isSecurityActive %}
+                            Security Active!
+                        {% else %}
+                            <button class="button button-alarm">Sound alarm!!!</button>
+                        {% endif %}
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
